base path : logo missing fix + extra spacing on hero fixed

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -207,7 +207,7 @@ body {
     border: 5px solid #fff;
     border-radius: 50%;
     z-index: 4;
-    position: sticky;
+    position: fixed;
 }
 
 
